push tests trim

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,19 +25,22 @@ docker {
 }
 
 process {
-    maxRetries=30
+    maxRetries=0
     errorStrategy='retry'
 
     withLabel: sratoolkit {
-        container =		'staphb/sratoolkit:latest'
-        cpus =			'3'
+        container = 'fionahak/sratoolkit_s3p:v0.0.1'
+        cpus = '4'
     }
+
+    withLabel: cutadapt {
+            container = 'rozanskide/trim_galore:latest'
+            cpus = '4'
+        }
 }
 
 params {
     results = "results"
-
-    initializeFolders = false
 
 	sra = "./bin/sra.txt"
 
