images + implement 'til mapping

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,24 +25,29 @@ docker {
 }
 
 process {
-    maxRetries=0
+    maxRetries=1
     errorStrategy='retry'
 
     withLabel: sratoolkit {
         container = 'fionahak/sratoolkit_s3p:v0.0.1'
         cpus = '4'
     }
-
     withLabel: cutadapt {
-            container = 'rozanskide/trim_galore:latest'
-            cpus = '4'
-        }
+        container = 'fionahak/trimming_s3p:v0.0.1'
+        cpus = '4'
+    }
+    withLabel: bowtie {
+        container = 'fionahak/align_s3p:v0.0.1'
+        cpus = '8'
+    }
 }
 
 params {
     results = "results"
 
 	sra = "./bin/sra.txt"
+	reference_genome = "none"
+	reference_annotation = "none"
 
 	help = false
 }
