--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,9 @@ process {
     maxRetries=1
     errorStrategy='retry'
 
+    withLabel: linux {
+        cpus = '2'
+    }
     withLabel: sratoolkit {
         container = 'fionahak/sratoolkit_s3p:v0.0.1'
         cpus = '4'
@@ -40,6 +43,10 @@ process {
         container = 'fionahak/align_s3p:v0.0.1'
         cpus = '8'
     }
+    withLabel: subread {
+        container = 'fionahak/subread_s3p:v0.0.1'
+        cpus = '6'
+    }
 }
 
 params {
@@ -48,6 +55,11 @@ params {
 	sra = "./bin/sra.txt"
 	reference_genome = "none"
 	reference_annotation = "none"
+
+	threads_download = 4
+	threads_mapping = 8
+	threads_sort_bam = 4
+	threads_counting = 4
 
 	help = false
 }
