add comment change name

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@
 
 /*
 ------------------------------------------------------------------------------------------------------------
-			 S3P Pipeline - Reprohackathon
+			 SP_cube Pipeline - Reprohackathon
 ------------------------------------------------------------------------------------------------------------
 
 	Staphylococcus Persistence Profiling Pipeline. M2 AMI2B
