--- a/nextflow.config
+++ b/nextflow.config
@@ -47,6 +47,10 @@ process {
         container = 'fionahak/subread_s3p:v0.0.1'
         cpus = '6'
     }
+    withLabel: r_stats {
+        container = 'fionahak/r_stats_spcube:v0.0.1'
+        cpus = '6'
+    }
 }
 
 params {
